fix hashtags alignment

--- a/css/list-of-posts.css
+++ b/css/list-of-posts.css
@@ -22,6 +22,11 @@ h1 {
   margin-left: 1rem;
 }
 
+.tags {
+  margin-left: 1rem;
+  margin-right: 0;
+}
+
 .ft-post-box {
   text-decoration: none;
   color: var(--base);
